Make LowDiskNotification use the NotificationDisplayService for system notifications (i.e. the sign in profile).

As per xiyuan&, during login, it's not safe to access the last used
profile. And, as he points out, this is a system-level notification.
NDS::GetForSystemNotifications was introduced recently and is a good
fit.

Bug: 791200
Change-Id: I6ecd2660a42a9a35a47643f2c166ee039b319b99